--- a/css/styles.css
+++ b/css/styles.css
@@ -22,7 +22,18 @@ body{
     justify-content: center;
     align-items: center;
   
-    background-color: #D64045;/*#467599;*/
+    background-image: linear-gradient(
+      #3db8e8 0%,
+      #2d62b8 20%,
+      #255a8f 20%,
+      #194290 40%,
+      #19477c 40%,
+      #1f7ab6 60%,
+      #2d1aaa 60%,
+      #2443de 80%,
+      #2c17a4 80%,
+      #5e0deb 100%
+  );
     border-bottom: 5px solid #fff;
     box-shadow: 0 0 30px -18px #D64045;
   
@@ -155,7 +166,7 @@ body{
     height: 100%;
     float: left;
     background-color: Transparent;
-    color: #1D3354;
+    color: #ffffff;
     font-size: 15px;
   }
   #chat_input_send{
