--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 body{
     background-color: #fff; /*#f6f6f6, EBEBD3, fafafa*/
-    font-family: Bungee Outline;
+    font-family: Helvetica;
     font-weight: 900;
   
     overflow: hidden;
