--- a/css/styles.css
+++ b/css/styles.css
@@ -14,9 +14,11 @@ body{
     margin: 0;
     box-sizing: border-box;
   }
+  
   #title_container{
     width: 100%;
-    height: 225px;
+    height: 300px;
+    margin: auto;
   
     display: flex;
     justify-content: center;
@@ -34,13 +36,11 @@ body{
       #2c17a4 80%,
       #5e0deb 100%
   );
-    border-bottom: 5px solid #fff;
-    box-shadow: 0 0 30px -18px #D64045;
-  
   }
   #title_inner_container{
     width: 100%;
     height: 100%;
+    margin: auto;
   
     display: flex;
     justify-content: center;
@@ -50,8 +50,10 @@ body{
     border-radius: 200px;
   }
   #title{
-    display: inline-block;
+    margin: auto;
+    display: flex;
     color: #fff;/*EBEBD3, C5283D*/
+    font-weight: bold;
     font-size: 55px;
     letter-spacing: 2px;
     user-select: none;
@@ -67,8 +69,8 @@ body{
   
     float: left;
     margin-top: 80px;
-  
   }
+
   #join_inner_container{
     width: 50%;
     height: 100%;
@@ -118,6 +120,115 @@ body{
     font-weight: bold;
     text-align: center;
     color: #fff;
+  }
+
+  #header_button_container{
+    width: 100%;
+    height: 50px;
+    margin: auto;
+  
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  #header_button{
+    width: 25%;
+    height: 100%;
+    margin: auto;
+  
+    font-family: Varela Round;
+    word-wrap: break-word;
+    font-size: 15px;
+    font-weight: bold;
+    text-align: center;
+    color: #fff;
+    background-color: #1D3354;
+  }
+
+  #menu_container{
+    width: 100%;
+    height: 200px;
+  
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  
+    float: left;
+    margin-top: 80px;
+  }
+  
+  #menu_inner_container{
+    width: 50%;
+    height: 100%;
+  }
+
+  #menu_input_container{
+    width: 100%;
+    height: 50px;
+  
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  
+    float: left;
+  }
+
+  #menu_input{
+    width: 60%;
+    height: 40px;
+  
+    color: #1D3354;
+    font-family: Varela Round;
+    font-size: 15px;
+    font-weight: bold;
+    text-align: center;
+    background-color: Transparent;
+    border-bottom: 2px dashed #1D3354;
+  
+  }
+
+  #menu_input:focus{
+    box-shadow: 0 10px 30px -17px #1D3354;
+  }
+
+  #menu_button_container{
+    width: 35%;
+    height: 50px;
+    margin: auto;
+  
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  #menu_button{
+    width: 60%;
+    height: 40px;
+  
+    font-family: Varela Round;
+    font-size: 15px;
+    font-weight: bold;
+    text-align: center;
+    color: #fff;
+    background-color: #1D3354;
+  }
+
+  #img_container{
+    width: 20%;
+    height: 100%;
+    margin: auto;
+  
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  
+  }
+
+  #img_class{
+    width: 100%;
+    height: 100%;
+    margin: auto;
   }
   
   #chat_container{
