--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,7 @@ body{
     font-family: Helvetica;
     font-weight: 900;
   
-    overflow: hidden;
+    overflow: auto;
     animation: blur 0.5s ease-out;
   
   }
@@ -114,7 +114,7 @@ body{
   #join_button{
     width: 60%;
     height: 40px;
-  
+    
     font-family: Varela Round;
     font-size: 15px;
     font-weight: bold;
